--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -33,7 +33,7 @@
 }
 
 /* End of animation */
-@media screen and (max-width: 1160px) {
+@media screen and (max-width: 89.125rem) {
 	.hamburger {
 		visibility: visible;
 	}
