--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -7,7 +7,7 @@
 	flex-direction: row;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
-	gap: 4rem;
+	gap: 2.5rem;
 }
 
 .row {
